--- a/addon-hyperhdr/config.json
+++ b/addon-hyperhdr/config.json
@@ -8,7 +8,8 @@
     "amd64",
     "aarch64"
   ],
-  "startup": "application",
+  "startup": "system",
+  "ingress": true,
   "apparmor": true,
   "boot": "auto",
   "ports": {
