--- a/addon-hyperhdr/config.json
+++ b/addon-hyperhdr/config.json
@@ -11,6 +11,8 @@
   "startup": "system",
   "ingress": true,
   "ingress_port": 8090,
+  "ingress_stream": true,
+  "ingress_entry": "/www",
   "apparmor": true,
   "boot": "auto",
   "ports": {
