--- a/addon-hyperhdr/config.json
+++ b/addon-hyperhdr/config.json
@@ -12,6 +12,7 @@
   "ingress": true,
   "ingress_port": 8090,
   "ingress_stream": true,
+  "host_network": true,
   "ingress_entry": "/www",
   "apparmor": true,
   "boot": "auto",
